removed DS_Store files, added new hobby image, fixed spacing between sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -10085,9 +10085,16 @@ section.resume-section .resume-section-content {
 
 @media (min-width: 768px) {
   section.resume-section {
+    min-height: 40vh;
+  }
+}
+
+@media (min-width: 768px) {
+  section.main-section {
     min-height: 100vh;
   }
 }
+
 @media (min-width: 992px) {
   section.resume-section {
     padding-left: 3rem;
